<resources>
    <string name="app_name">InicioSesion</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="minimum_6_characters">(Minimum 6 characters)</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_now">Sign in now</string>
    <string name="contenido_tab_2">Contenido Tab 2</string>
    <string name="iniciar_sesi_n_con_google">Iniciar sesión con Google+</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="constrase_a">Constraseña</string>
    <string name="m_nimo_6_car_cteres">(Mínimo 6 carácteres)</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?</string>
    <string name="iniciar_sesi_n_ahora">Iniciar sesión ahora</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="iniciar_sesi_n_con_facebook">Iniciar sesión con Facebook</string>
</resources>
